# writual_quotes

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: tts_server.py
src-tauri/src/: lib.rs  main.rs
src/components/: QuoteCard.jsx  TitleBar.jsx  Toolbar.jsx  Tooltip.jsx
