[package]
name = "writual"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "writual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
tokio = "1.45.1"
window-vibrancy = "0.6.0"
tray-icon = "0.20.1"
winapi = { version = "0.3.9", features = ["shellscalingapi"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2.3.0"
